2020-04-30  Keith Marshall  <keith@users.osdn.me>

	Publish MinGW.org WSL-5.3.1 package set.

	* mingw32/mingw32-runtime.xml (mingwrt-5.3.1-dev, mingwrt-5.3.1-dll)
	(mingwrt-5.3.1-lic, mingwrt-5.3.1-man, libmingwex-5.3.1-dll-2)
	(libmingwex-5.3.1-dev, w32api-5.3.1-dev): Add references.
	* common/issue.log mingw32/issue.log: Update accordingly.

2020-03-17  Keith Marshall  <keith@users.osdn.me>

	Correct catalogue reference for mingw-get

	* mingw32/mingw32-mingw-get.xml (mingw-get-bin, mingw-get-gui)
	(mingw-get-lic, pkginfo-bin): Add references for "pre-20170905-1"
	release; remove obsolete references to old SF-hosted releases.
	(download-host): Point it to OSDN.net
	* common/issue.log mingw32/issue.log: Update accordingly.

2020-03-06  Keith Marshall  <keith@users.osdn.me>

	Update GCC dependencies on LIBISL.DLL

	* mingw32/mingw32-gcc4.xml (gcc-core-bin): Explicitly identify all
	LIBISL.DLL version dependencies, specific to individual GCC releases.
	* common/issue.log mingw32/issue.log: Update accordingly.

2020-03-05  Keith Marshall  <keith@users.osdn.me>

	Update ISL package set to version 0.21

	* mingw32/mingw32-isl.xml (isl-dev): Add release reference; specify
	explicit LIBISL.DLL version dependencies for individual ISL releases.
	(isl-doc, isl-lic, libisl-dll): Add release references.
	* common/issue.log mingw32/issue.log: Update accordingly.

2020-03-05  Keith Marshall  <keith@users.osdn.me>

	Update MPC package set to version 1.1.0

	* mingw32/mingw32-mpc.xml (mpc-dev): Add release reference; specify
	minimum version dependency on corresponding MPFR-4.0.2 release.
	(mpc-info, mpc-lic): Add release references.
	(libmpc-dll): Add release reference; specify explicit LIBMPFR.DLL
	dependencies for individual LIBMPC.DLL releases.
	* common/issue.log mingw32/issue.log: Update accordingly.

2020-03-05  Keith Marshall  <keith@users.osdn.me>

	Update MPFR package set to version 4.0.2

	* mingw32/mingw32-mpfr.xml (mpfr-dev): Add release reference; define