@@ -66,6 +66,7 @@
       <component class="dev">
         <requires eq="mingwrt-%-mingw32-dll.tar" />
         <requires eq="wsl-features-*-mingw32-cfg.tar" />
+        <release tarname="mingwrt-5.3.2-mingw32-dev.tar.xz" />
         <release tarname="mingwrt-5.3.1-mingw32-dev.tar.xz" />
         <release tarname="mingwrt-5.3-mingw32-dev.tar.xz" />
         <release tarname="mingwrt-5.2.3-mingw32-dev.tar.xz" />
@@ -78,6 +79,7 @@
       </component>
 
       <component class="dll">
+        <release tarname="mingwrt-5.3.2-mingw32-dll.tar.xz" />
         <release tarname="mingwrt-5.3.1-mingw32-dll.tar.xz" />
         <release tarname="mingwrt-5.3-mingw32-dll.tar.xz" />
         <release tarname="mingwrt-5.2.3-mingw32-dll.tar.xz" />
@@ -90,6 +92,7 @@
       </component>
 
       <component class="lic">
+        <release tarname="mingwrt-5.3.2-mingw32-lic.tar.xz" />
         <release tarname="mingwrt-5.3.1-mingw32-lic.tar.xz" />
         <release tarname="mingwrt-5.3-mingw32-lic.tar.xz" />
         <release tarname="mingwrt-5.2.3-mingw32-lic.tar.xz" />
@@ -102,6 +105,7 @@
       </component>
 
       <component class="man">
+        <release tarname="mingwrt-5.3.2-mingw32-man.tar.xz" />
         <release tarname="mingwrt-5.3.1-mingw32-man.tar.xz" />
         <release tarname="mingwrt-5.3-mingw32-man.tar.xz" />
         <release tarname="mingwrt-5.2.3-mingw32-man.tar.xz" />
@@ -133,6 +137,9 @@
 
       <component class="dev">
         <requires eq="mingwrt-%-mingw32-dev.tar" />
+        <release tarname="libmingwex-5.3.2-mingw32-dev.tar.xz">
+          <requires eq="libmingwex-%-mingw32-dll-3.tar" />
+        </release>
         <release tarname="libmingwex-5.3.1-mingw32-dev.tar.xz">
           <requires eq="libmingwex-%-mingw32-dll-2.tar" />
         </release>
@@ -163,6 +170,7 @@
       </component>
 
       <component class="dll">
+        <release tarname="libmingwex-5.3.2-mingw32-dll-3.tar.xz" />
         <release tarname="libmingwex-5.3.1-mingw32-dll-2.tar.xz" />
         <release tarname="libmingwex-5.3-mingw32-dll-2.tar.xz" />
         <release tarname="libmingwex-5.2.3-mingw32-dll-2.tar.xz" />
@@ -194,6 +202,7 @@
       <licence tarname="mingwrt-%-mingw32-lic.tar.%" />
 
       <component class="dev">
+        <release tarname="w32api-5.3.2-mingw32-dev.tar.xz" />
         <release tarname="w32api-5.3.1-mingw32-dev.tar.xz" />
         <release tarname="w32api-5.3-mingw32-dev.tar.xz" />
         <release tarname="w32api-5.2.3-mingw32-dev.tar.xz" />
@@ -208,4 +217,6 @@
 
   </package-collection>
 </software-distribution>
-<!-- vim: set nocompatible expandtab fileformat=unix textwidth=80 tabstop=2 shiftwidth=2: -->
+
+<!-- vim: set fileformat=unix textwidth=80 tabstop=2 shiftwidth=2: -->
+<!-- vim: set nocompatible expandtab: -->
